--- a/test/cs50.yml
+++ b/test/cs50.yml
@@ -1,7 +1,7 @@
 check50: 
   files: &check50_files
     - !exclude "*"
-    - !require hello.c
+    - !require test.c
     
 submit50:
   files: *check50_files
