--- a/filter/.cs50.yml
+++ b/filter/.cs50.yml
@@ -1,7 +1,7 @@
 check50: 
   files: &check50_files
     - !exclude "*"
-    - !require hello.c
+    - !require filter.c
     
 submit50:
   files: *check50_files
