--- a/array_index/.cs50.yml
+++ b/array_index/.cs50.yml
@@ -1,7 +1,7 @@
 check50: 
   files: &check50_files
     - !exclude "*"
-    - !require filter.c
+    - !require array_index.c
     
 submit50:
   files: *check50_files
