--- a/score_average/cs50.yml
+++ b/score_average/cs50.yml
@@ -1,7 +1,7 @@
 check50: 
   files: &check50_files
     - !exclude "*"
-    - !require filter.c
+    - !require score_average.c
     
 submit50:
   files: *check50_files
