--- a/common_elements/.cs50.yml
+++ b/common_elements/.cs50.yml
@@ -1,7 +1,7 @@
 check50: 
   files: &check50_files
     - !exclude "*"
-    - !require filter.c
+    - !require common_elements.c
     
 submit50:
   files: *check50_files
