--- a/palidrome_check/.cs50.yml
+++ b/palidrome_check/.cs50.yml
@@ -1,7 +1,7 @@
 check50: 
   files: &check50_files
     - !exclude "*"
-    - !require filter.c
+    - !require palidrome_check.c
     
 submit50:
   files: *check50_files
