--- a/magic_square/cs50.yml
+++ b/magic_square/cs50.yml
@@ -1,7 +1,7 @@
 check50: 
   files: &check50_files
     - !exclude "*"
-    - !require filter.c
+    - !require magic_square.c
     
 submit50:
   files: *check50_files
