--- a/ncursesd/.cs50.yml
+++ b/ncursesd/.cs50.yml
@@ -1,7 +1,7 @@
 check50: 
   files: &check50_files
     - !exclude "*"
-    - !require test.c
+    - !require gamed.c
     
 submit50:
   files: *check50_files
