Update and rename cs50.yml to .cs50.yml

--- a/sum_of_digits/.cs50.yml
+++ b/sum_of_digits/.cs50.yml
@@ -1,7 +1,7 @@
 check50: 
   files: &check50_files
     - !exclude "*"
-    - !require filter.c
+    - !require sum_of_digits.c
     
 submit50:
   files: *check50_files
