Update and rename cs50.yml to .cs50.yml

--- a/longest_word_finder/.cs50.yml
+++ b/longest_word_finder/.cs50.yml
@@ -1,7 +1,7 @@
 check50: 
   files: &check50_files
     - !exclude "*"
-    - !require array_index.c
+    - !require longest_word_finder.c
     
 submit50:
   files: *check50_files
