Update and rename cs50.yml to .cs50.yml

--- a/substitution_cipher/.cs50.yml
+++ b/substitution_cipher/.cs50.yml
@@ -1,7 +1,7 @@
 check50: 
   files: &check50_files
     - !exclude "*"
-    - !require time_greeting.c
+    - !require substitution_cipher
     
 submit50:
   files: *check50_files
