--- a/substitution_cipher/.cs50.yml
+++ b/substitution_cipher/.cs50.yml
@@ -1,7 +1,7 @@
 check50: 
   files: &check50_files
     - !exclude "*"
-    - !require substitution_cipher
+    - !require substitution_cipher.c
     
 submit50:
   files: *check50_files
