--- a/student_grade_manager/.cs50.yml
+++ b/student_grade_manager/.cs50.yml
@@ -1,7 +1,7 @@
 check50: 
   files: &check50_files
     - !exclude "*"
-    - !require time_greeting.c
+    - !require student_grade_manager.c
     
 submit50:
   files: *check50_files
