--- a/quiz_game/.cs50.yml
+++ b/quiz_game/.cs50.yml
@@ -1,7 +1,7 @@
 check50: 
   files: &check50_files
     - !exclude "*"
-    - !require time_greeting.c
+    - !require quiz_game.c
     
 submit50:
   files: *check50_files
