--- a/word_counter/.cs50.yml
+++ b/word_counter/.cs50.yml
@@ -1,7 +1,7 @@
 check50: 
   files: &check50_files
     - !exclude "*"
-    - !require filter.c
+    - !require word_counter.c
     
 submit50:
   files: *check50_files
