--- a/reversed_seg/.cs50.yml
+++ b/reversed_seg/.cs50.yml
@@ -1,7 +1,7 @@
 check50: 
   files: &check50_files
     - !exclude "*"
-    - !require filter.c
+    - !require reversed_seg.c
     
 submit50:
   files: *check50_files
