--- a/del_alpha/cs50.yml
+++ b/del_alpha/cs50.yml
@@ -1,7 +1,7 @@
 check50: 
   files: &check50_files
     - !exclude "*"
-    - !require filter.c
+    - !require del_alpha.c
     
 submit50:
   files: *check50_files
