--- a/gamed/.cs50.yml
+++ b/gamed/.cs50.yml
@@ -1,7 +1,7 @@
 check50: 
   files: &check50_files
     - !exclude "*"
-    - !require gamed.c
+    - !require "*"
     
 submit50:
-  files: *check50_files
+  files: "*"
