--- a/gamed/.cs50.yml
+++ b/gamed/.cs50.yml
@@ -2,6 +2,7 @@ check50:
   files: &check50_files
     - !exclude "*"
     - !require gamed.c
+    - !require Makefile
 
 submit50:
   files: *check50_files
