--- a/gamed/.cs50.yml
+++ b/gamed/.cs50.yml
@@ -1,8 +1,7 @@
 check50: 
   files: &check50_files
     - !exclude "*"
-    - !require gamed.c
-    - !require Makefile
+    - !require nursesd
 
 submit50:
   files: *check50_files
