--- a/gamed/.cs50.yml
+++ b/gamed/.cs50.yml
@@ -1,6 +1,7 @@
 check50: 
   files: &check50_files
-    - !require "*"
+    - !exclude "*"
+    - !require gamed.c
 
 submit50:
   files: *check50_files
